Adding mobile phone login and PWA

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,6 +12,9 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    /* Fix for the errors you saw */
+    "types": ["node"], 
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": false,
